Initial port to 1.7.10