@@ -1,9 +1,17 @@
 package dev.emi.emi.screen.widget;
 
+import java.awt.*;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import com.mojang.realmsclient.util.Pair;
+import dev.emi.emi.EmiUtil;
+import dev.emi.emi.backport.OrderedText;
+import dev.emi.emi.screen.widget.config.ExtendedTextFieldWidget;
+import net.minecraft.text.Text;
+import net.minecraft.util.math.RotationAxis;
 import org.lwjgl.glfw.GLFW;
 
 import com.google.common.collect.Lists;
@@ -17,20 +25,15 @@ import dev.emi.emi.search.EmiSearch;
 import dev.emi.emi.search.QueryType;
 import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.widget.TextFieldWidget;
-import net.minecraft.client.resource.language.I18n;
 import net.minecraft.client.util.math.MatrixStack;
-import net.minecraft.text.MutableText;
 import net.minecraft.text.Style;
 import net.minecraft.util.Formatting;
-import net.minecraft.util.Pair;
-import net.minecraft.util.math.MathHelper;
-import net.minecraft.util.math.Vec3f;
 
-public class EmiSearchWidget extends TextFieldWidget {
+public class EmiSearchWidget extends ExtendedTextFieldWidget {
 	private static final Pattern ESCAPE = Pattern.compile("\\\\.");
 	private List<String> searchHistory = Lists.newArrayList();
 	private int searchHistoryIndex = 0;
-	private List<Pair<Integer, Style>> styles;
+	private List<Pair<Integer, Style>> styles = new ArrayList<>();
 	private long lastClick = 0;
 	private String last = "";
 	private long lastRender = System.currentTimeMillis();
@@ -40,98 +43,11 @@ public class EmiSearchWidget extends TextFieldWidget {
 	public boolean isFocused;
 
 	public EmiSearchWidget(TextRenderer textRenderer, int x, int y, int width, int height) {
-		super(textRenderer, x, y, width, height, EmiPort.literal(""));
+		super(textRenderer, x, y, width, height);
 		this.setFocusUnlocked(true);
 		this.setEditableColor(-1);
 		this.setUneditableColor(-1);
 		this.setMaxLength(256);
-		this.setRenderTextProvider((string, stringStart) -> {
-			MutableText text = null;
-			int s = 0;
-			int last = 0;
-			for (; s < styles.size(); s++) {
-				Pair<Integer, Style> style = styles.get(s);
-				int end = style.getLeft();
-				if (end > stringStart) {
-					if (end - stringStart >= string.length()) {
-						text = EmiPort.literal(string.substring(0, string.length()), style.getRight());
-						// Skip second loop
-						s = styles.size();
-						break;
-					}
-					text = EmiPort.literal(string.substring(0, end - stringStart), style.getRight());
-					last = end - stringStart;
-					s++;
-					break;
-				}
-			}
-			for (; s < styles.size(); s++) {
-				Pair<Integer, Style> style = styles.get(s);
-				int end = style.getLeft();
-				if (end - stringStart >= string.length()) {
-					EmiPort.append(text, EmiPort.literal(string.substring(last, string.length()), style.getRight()));
-					break;
-				}
-				EmiPort.append(text, EmiPort.literal(string.substring(last, end - stringStart), style.getRight()));
-				last = end - stringStart;
-			}
-			return EmiPort.ordered(text);
-		});
-		this.setChangedListener(string -> {
-			if (string.isEmpty()) {
-				this.setSuggestion(I18n.translate("emi.search"));
-				EmiScreenManager.focusSearchSidebarType(EmiConfig.emptySearchSidebarFocus);
-			} else {
-				this.setSuggestion("");
-				EmiScreenManager.focusSearchSidebarType(EmiConfig.searchSidebarFocus);
-			}
-			Matcher matcher = EmiSearch.TOKENS.matcher(string);
-			List<Pair<Integer, Style>> styles = Lists.newArrayList();
-			int last = 0;
-			while (matcher.find()) {
-				int start = matcher.start();
-				int end = matcher.end();
-				if (last < start) {
-					styles.add(new Pair<Integer, Style>(start, Style.EMPTY.withFormatting(Formatting.WHITE)));
-				}
-				String group = matcher.group();
-				if (group.startsWith("-")) {
-					styles.add(new Pair<Integer, Style>(start + 1, Style.EMPTY.withFormatting(Formatting.RED)));
-					start++;
-					group = group.substring(1);
-				}
-				QueryType type = QueryType.fromString(group);
-				int subStart = type.prefix.length();
-				if (group.length() > 1 + subStart && group.substring(subStart).startsWith("/") && group.endsWith("/")) {
-					int rOff = start + subStart + 1;
-					styles.add(new Pair<Integer, Style>(rOff, type.slashColor));
-					Matcher rMatcher = ESCAPE.matcher(string.substring(rOff, end - 1));
-					int rLast = 0;
-					while (rMatcher.find()) {
-						int rStart = rMatcher.start();
-						int rEnd = rMatcher.end();
-						if (rLast < rStart) {
-							styles.add(new Pair<Integer, Style>(rStart + rOff, type.regexColor));
-						}
-						styles.add(new Pair<Integer, Style>(rEnd + rOff, type.escapeColor));
-						rLast = rEnd;
-					}
-					if (rLast < end - 1) {
-						styles.add(new Pair<Integer, Style>(end - 1, type.regexColor));
-					}
-					styles.add(new Pair<Integer, Style>(end, type.slashColor));
-				} else {
-					styles.add(new Pair<Integer, Style>(end, type.color));
-				}
-
-				last = end;
-			}
-			if (last < string.length()) {
-				styles.add(new Pair<Integer, Style>(string.length(), Style.EMPTY.withFormatting(Formatting.WHITE)));
-			}
-			this.styles = styles;
-			EmiSearch.search(string);
-		});
 	}
 
 	public void update() {
@@ -149,8 +65,8 @@ public class EmiSearchWidget extends TextFieldWidget {
 		if (!focused) {
 			searchHistoryIndex = 0;
 			String currentSearch = getText();
-			if (!currentSearch.isBlank() && !currentSearch.isEmpty()) {
-				searchHistory.removeIf(String::isBlank);
+			if (!currentSearch.trim().isEmpty() && !currentSearch.isEmpty()) {
+				searchHistory.removeIf(s -> s.trim().isEmpty());
 				searchHistory.remove(currentSearch);
 				searchHistory.add(0, currentSearch);
 				if (searchHistory.size() > 36) {
@@ -159,6 +75,73 @@ public class EmiSearchWidget extends TextFieldWidget {
 			}
 		}
 		isFocused = focused;
+		super.setFocused(focused);
+	}
+
+	@Override
+	public void write(String s) {
+		super.write(s);
+		handleText();
+	}
+
+	@Override
+	public void eraseCharacters(int characterOffset) {
+		super.eraseCharacters(characterOffset);
+		handleText();
+	}
+
+	public void handleText() {
+		if (getText().isEmpty()) {
+			EmiScreenManager.focusSearchSidebarType(EmiConfig.emptySearchSidebarFocus);
+		} else {
+			EmiScreenManager.focusSearchSidebarType(EmiConfig.searchSidebarFocus);
+		}
+		Matcher matcher = EmiSearch.TOKENS.matcher(getText());
+		List<Pair<Integer, Style>> styles = Lists.newArrayList();
+		int last = 0;
+		while (matcher.find()) {
+			int start = matcher.start();
+			int end = matcher.end();
+			if (last < start) {
+				styles.add(Pair.of(start, new Style().setFormatting(Formatting.WHITE)));
+			}
+			String group = matcher.group();
+			if (group.startsWith("-")) {
+				styles.add(Pair.of(start + 1, new Style().setFormatting(Formatting.RED)));
+				start++;
+				group = group.substring(1);
+			}
+			QueryType type = QueryType.fromString(group);
+			int subStart = type.prefix.length();
+			if (group.length() > 1 + subStart && group.substring(subStart).startsWith("/") && group.endsWith("/")) {
+				int rOff = start + subStart + 1;
+				styles.add(Pair.of(rOff, type.slashColor));
+				Matcher rMatcher = ESCAPE.matcher(getText().substring(rOff, end - 1));
+				int rLast = 0;
+				while (rMatcher.find()) {
+					int rStart = rMatcher.start();
+					int rEnd = rMatcher.end();
+					if (rLast < rStart) {
+						styles.add(Pair.of(rStart + rOff, type.regexColor));
+					}
+					styles.add(Pair.of(rEnd + rOff, type.escapeColor));
+					rLast = rEnd;
+				}
+				if (rLast < end - 1) {
+					styles.add(Pair.of(end - 1, type.regexColor));
+				}
+				styles.add(Pair.of(end, type.slashColor));
+			} else {
+				styles.add(Pair.of(end, type.color));
+			}
+
+			last = end;
+		}
+		if (last < getText().length()) {
+			styles.add(Pair.of(getText().length(), new Style().setFormatting(Formatting.WHITE)));
+		}
+		this.styles = styles;
+		EmiSearch.search(getText());
 	}
 
 	@Override
@@ -167,12 +150,11 @@ public class EmiSearchWidget extends TextFieldWidget {
 	}
 	
 	@Override
-	public boolean mouseClicked(double mouseX, double mouseY, int button) {
+	public void mouseClicked(int mouseX, int mouseY, int button) {
 		if (!isMouseOver(mouseX, mouseY) || !EmiConfig.enabled) {
 			setFocused(false);
-			return false;
-		} else {
-			boolean b = super.mouseClicked(mouseX, mouseY, button == 1 ? 0 : button);
+        } else {
+			super.mouseClicked(mouseX, mouseY, button == 1 ? 0 : button);
 			if (this.isFocused()) {
 				if (button == 0) {
 					if (System.currentTimeMillis() - lastClick < 500) {
@@ -186,18 +168,17 @@ public class EmiSearchWidget extends TextFieldWidget {
 					this.setFocused(true);
 				}
 			}
-			return b;
 		}
 	}
 
 	@Override
-	public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
+	public boolean keyPressed(char c, int keyCode) {
 		if (this.isFocused()) {
-			if (EmiConfig.clearSearch.matchesKey(keyCode, scanCode)) {
+			if (EmiConfig.clearSearch.matchesKey(keyCode, keyCode)) {
 				setText("");
 				return true;
 			}
-			if ((EmiConfig.focusSearch.matchesKey(keyCode, scanCode)
+			if ((EmiConfig.focusSearch.matchesKey(keyCode, keyCode)
 					|| keyCode == GLFW.GLFW_KEY_ENTER || keyCode == GLFW.GLFW_KEY_ESCAPE)) {
 				this.setFocused(false);
 				this.setFocused(false);
@@ -214,12 +195,12 @@ public class EmiSearchWidget extends TextFieldWidget {
 				}
 			}
 		}
-		return super.keyPressed(keyCode, scanCode, modifiers);
+		return super.keyPressed(c, keyCode);
 	}
 
 	@Override
-	public void render(MatrixStack raw, int mouseX, int mouseY, float delta) {
-		EmiDrawContext context = EmiDrawContext.wrap(raw);
+	public void render() {
+		EmiDrawContext context = EmiDrawContext.wrap(MatrixStack.INSTANCE);
 		this.setEditable(EmiConfig.enabled);
 		String lower = getText().toLowerCase();
 
@@ -236,7 +217,7 @@ public class EmiSearchWidget extends TextFieldWidget {
 		view.push();
 		if (deg != 0) {
 			view.translate(this.x + this.width / 2, this.y + this.height / 2, 0);
-			view.multiply(Vec3f.NEGATIVE_Z.getDegreesQuaternion(deg));
+			view.multiply(RotationAxis.NEGATIVE_Z.rotationDegrees(deg));
 			view.translate(-(this.x + this.width / 2), -(this.y + this.height / 2), 0);
 			RenderSystem.applyModelViewMatrix();
 		}
@@ -244,12 +225,18 @@ public class EmiSearchWidget extends TextFieldWidget {
 		if (lower.contains("jeb_")) {
 			int amount = 0x3FF;
 			float h = ((lastRender & amount) % (float) amount) / (float) amount;
-			int rgb = MathHelper.hsvToRgb(h, 1, 1);
+			int rgb = Color.HSBtoRGB(h, 1, 1);
 			context.setColor(((rgb >> 16) & 0xFF) / 255f, ((rgb >> 8) & 0xFF) / 255f, ((rgb >> 0) & 0xFF) / 255f);
 		}
 
 		if (EmiConfig.enabled) {
-			super.render(context.raw(), mouseX, mouseY, delta);
+			String old = getText();
+			setText(getRenderText(this.getText(), this.firstCharacterIndex).asString());
+			super.render();
+			setText(old);
+			if (!this.isFocused() && getText().isEmpty()) {
+				context.drawText(EmiPort.translatable("emi.search"), this.x + 4, this.y + (this.height - 8) / 2, -8355712);
+			}
 			if (highlight) {
 				int border = 0xffeeee00;
 				context.fill(this.x - 1, this.y - 1, this.width + 2, 1, border);
@@ -261,5 +248,39 @@ public class EmiSearchWidget extends TextFieldWidget {
 		context.resetColor();
 		view.pop();
 		RenderSystem.applyModelViewMatrix();
+	}
+
+	private OrderedText getRenderText(String string, int stringStart) {
+		Text text = EmiPort.literal("");
+		int s = 0;
+		int last = 0;
+		for (; s < styles.size(); s++) {
+			Pair<Integer, Style> style = styles.get(s);
+			int end = style.first();
+			if (end > stringStart) {
+				if (end - stringStart >= string.length()) {
+					text = EmiPort.literal(string.substring(0, string.length()), style.second());
+					// Skip second loop
+					s = styles.size();
+					break;
+				}
+				text = EmiPort.literal(string.substring(0, end - stringStart), style.second());
+				last = end - stringStart;
+				s++;
+				break;
+			}
+		}
+		for (; s < styles.size(); s++) {
+			Pair<Integer, Style> style = styles.get(s);
+			int end = style.first();
+			if (end - stringStart >= string.length()) {
+				EmiPort.append(text, EmiPort.literal(string.substring(last, string.length()), style.second()));
+				break;
+			}
+			EmiPort.append(text, EmiPort.literal(string.substring(last, end - stringStart), style.second()));
+			last = end - stringStart;
+		}
+		EmiUtil.deParentText(text);
+		return EmiPort.ordered(text);
 	}
 }
